--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
         "laravel/passport": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "predis/predis": "2.0",
         "spatie/laravel-permission": "^6.4"
     },
     "require-dev": {
