--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
         "predis/predis": "2.0",
         "spatie/laravel-permission": "^6.4"
