--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
