--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/luxon": "^3.4.2",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "next": "14.1.4",
     "next-nprogress-bar": "^2.3.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "swiper": "^10.0.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
