--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/croppie": "^2.6.4",
     "@types/luxon": "^3.4.2",
+    "@types/react-avatar-editor": "^13.0.2",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
+    "croppie": "^2.6.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
@@ -20,6 +23,8 @@
     "next": "14.1.4",
     "next-nprogress-bar": "^2.3.11",
     "react": "^18",
+    "react-avatar-editor": "^13.0.2",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.75.0",
