--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "next-nprogress-bar": "^2.3.11",
     "react": "^18",
     "react-avatar-editor": "^13.0.2",
+    "react-countdown": "^2.3.5",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
