--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "croppie": "^2.6.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "laravel-echo": "^1.16.1",
     "luxon": "^3.4.4",
     "moment": "^2.30.1",
     "next": "14.1.4",
@@ -29,13 +30,16 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.75.0",
-    "swiper": "^10.0.0"
+    "socket.io-client": "^2.5.0",
+    "swiper": "^10.0.0",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
