--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
