--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-avatar-editor": "^13.0.2",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "croppie": "^2.6.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -30,6 +31,7 @@
     "next-nprogress-bar": "^2.3.11",
     "react": "^18",
     "react-avatar-editor": "^13.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
