--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,9 +34,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.5.3",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-katex": "^3.0.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.75.0",
     "socket.io-client": "^2.5.0",
     "swiper": "^10.0.0",
@@ -48,6 +50,7 @@
     "@types/katex": "^0.16.7",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10.0.1",
