--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-katex": "^3.0.1",
+    "react-push-notification": "^1.5.4",
     "react-toastify": "^10.0.5",
     "sass": "^1.75.0",
     "socket.io-client": "^2.5.0",
