--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "@ckeditor/ckeditor5-react": "^7.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/croppie": "^2.6.4",
+    "@types/dompurify": "^3.0.5",
     "@types/luxon": "^3.4.2",
     "@types/react-avatar-editor": "^13.0.2",
     "antd": "^5.16.1",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "croppie": "^2.6.5",
+    "dompurify": "^3.1.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "katex": "^0.16.10",
@@ -53,6 +55,7 @@
     "@types/react": "^18",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
+    "@types/socket.io-client": "^3.0.0",
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
